--- a/Website/index.html
+++ b/Website/index.html
@@ -47,12 +47,12 @@
                 
                 <br></br>
 <br>
-	  		 		<p style="font-size:60px; color: Aliceblue; font-family: Blackoak STD;"> <strong>LANDOWNERS</strong></p>
+	  		 		<p style="font-size:60px; color: Yellow; font-family: Blackoak STD;"> <strong>LANDOWNERS</strong></p>
                           
-     <p style="font-size:60px; color:Aliceblue; font-family:Blackoak STD;
+     <p style="font-size:60px; color:Yellow; font-family:Blackoak STD;
    ">FOR</strong>
                 </p>
-                <p style="font-size:60px; color:AliceBlue; font-family: Blackoak STD;
+                <p style="font-size:60px; color:Yellow; font-family: Blackoak STD;
    "><strong>MONTANA</strong></p>
 
 
@@ -60,7 +60,7 @@
 <br></br>
  <br>
   <br>
-    <H1 style="color: grey; font-size:30px; font-family:Lucida Fax; text-Align: Center; color: Aliceblue; Margin-left: 5em; Margin-right: 5em "> Dedicated to Ensuring the Protection and Expansion of Private Property Rights in Montana
+    <H1 style="color: grey; font-size:30px; font-family:Lucida Fax; text-Align: Center; color: grey; Margin-left: 5em; Margin-right: 5em "> Dedicated to Ensuring the Protection and Expansion of Private Property Rights in Montana
 </H1> 		 		
   <br>
 	    </div><!-- /headerwrap -->
@@ -83,7 +83,7 @@
 <h1  style="font-size:30px; color: Grey; font-family: blackoak STD;text-align: center;
     "> Please Contribute Today!</h1> 
                     <br>
-	<center><iframe src="https://causes.anedot.com/landowerns-for-montana-pac?embed=standard" width="80%" height="745" frameborder="0"></iframe></center>
+	<center><iframe src="https://causes.anedot.com/landowerns-for-montana-pac?embed=standard" width="80%" height="750" frameborder="0"></iframe></center>
                     <br>
                     <br>
                  <section id="Contact" name="Contact"></section>
