--- a/Website/index.html
+++ b/Website/index.html
@@ -65,7 +65,7 @@
   <br>
 	    </div><!-- /headerwrap -->
 <section id="OurMission" name="OurMission"></section>
-				<div class="col-lg-6;" style="background-color: aliceblue;">
+				<div class="col-lg-6;" style="background-color:Aliceblue;">
                     <br>
                         <br>
                     <h1 class="centered" style="font-family: Blackoak std;font-size: 40px; color:grey;">Our Mission</h1>
@@ -87,7 +87,7 @@
                     <br>
                     <br>
                  <section id="Contact" name="Contact"></section>
-		<center> <h3 style="background-color: Aliceblue; font-size: 20px; font-family: blackoak std; color: darkgrey;">Contact Information</h3></p>
+		<center> <h3 style="background-color:AliceBlue; font-size: 20px; font-family: blackoak std; color: darkgrey;">Contact Information</h3></p>
                    
 					
 						<span class="icon icon-envelop"></span>  info@landownersforMT.com  </center>
