--- a/Website/index.html
+++ b/Website/index.html
@@ -90,11 +90,11 @@
 		<center> <h3 style="background-color:whitesmoke; font-size: 20px; font-family: blackoak std; color: dimgrey;">Contact Information</h3></p>
                    
 					
-						<span class="icon icon-envelop"></span>  info@landownersforMT.com  </center>
+		<span rel="icon-envelop"> info@landownersforMT.com  </span>
 
 
 <br>
-<center><hr width="80%"</center>
+<center><hr width="60%"</center>
 
 <center><h4 style=" font-size: 15px;">Paid for by Landowners for Montana PAC
     <br>1820 N Last Chance Gulch
