--- a/Website/index.html
+++ b/Website/index.html
@@ -90,7 +90,7 @@
 		<center> <h3 style="background-color:whitesmoke; font-size: 20px; font-family: blackoak std; color: dimgrey;">Contact Information</h3></p>
                    
 					
-		<span img="icon-envelop"> info@landownersforMT.com  </span>
+		<span id="icon-envelop"> info@landownersforMT.com  </span>
 
 
 <br>
